añadido de imagenes

--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Portfolio4</title>
 </head>
 <body>
+    <header class="header">
+        <a href="#" class="header_logo">AS</a>
+        <ul class="header_menu">
+            <li class="header_li" ><a class="active" href="#">Home</a></li>
+            <li class="header_li" ><a href="#">About</a></li>
+            <li class="header_li" ><a href="#">Work</a></li>
+            <li class="header_li" ><a href="#">Contact</a></li>
+        </ul>
+    </header>
+
+    <section>
+        <img src="img/stars.png" alt="" id="stars">
+        <img src="img/moon.png" alt="" id="moon">
+        <img src="/img/behind_mountains.png" alt="" id="mountains_behind">
+        <img src="img/front_mountain_2.jpg" alt="" id="front_mountains">
+    </section>
     
 </body>
 </html>
